<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:clipToPadding="false"
android:overScrollMode="never"
android:padding="@dimen/_24sdp"
android:scrollbars="none"
android:layout_height="match_parent"
tools:context=".activities.SignInActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/Easy_Messages"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/login_to_continue"
        android:textColor="@color/secondary_text"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textSize="20sp"
        android:background="@drawable/background_input"
        android:textColor="@color/primary_text"
        android:importantForAutofill="no"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textSize="20sp"
        android:background="@drawable/background_input"
        android:textColor="@color/primary_text"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/sign_in"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:text="@string/create_new_account"/>
</LinearLayout>

</ScrollView>
